[package]
name = "solartom"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "solartom"
crate-type = ["cdylib"]

[dependencies]
argmin = "0.8.0"
assert_approx_eq = "1.1.0"
itertools = "0.10.5"
ndarray = "0.15.6"
numpy = "0.18.0"
pyo3 = { version = "0.18.0", features = ["extension-module"] }
rayon = "1.6.1"
rust-numpy = "0.1.0"
