[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "solartom"
version = "0.0.2"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["numpy", "matplotlib", "pylops"]

[project.optional-dependencies]
test = ["hypothesis", "sympy"]

[tool.maturin]
python-source = "python"
